# em_health

./: .env.example  .gitignore  .readthedocs.yaml  MANIFEST.in  README.rst  pyproject.toml
.github/workflows/: docker-publish.yml  publish_and_tag.yml
docker/: .env  Dockerfile  clean-db.sql  compose-dev.yaml  compose.yaml  docker-compose.yml  init-db.sh  init-tables.sql  pgbackrest.conf
docker/secrets/: postgres_emhealth_pwd  postgres_pganalyze_pwd
docs/: advanced_setup.rst  changelog.rst  cli.rst  conf.py  development.rst  getting_started.rst  index.rst  installation.rst  maintenance.rst  settings.rst  task.rst  using_emhealth.rst
em_health/: __init__.py  db_analyze.py  db_client.py  db_manager.py  fdw_manager.py  grafana_client.py  main.py  remote_client.py  uec_manager.py
em_health/db_migrations/: 001.sql  002.sql  003.sql
em_health/db_performance/: __init__.py  create_metric_funcs.sql  create_metric_tables.sql  db_analyze.py
em_health/sql/: init-tables.sql  init_db.sql
em_health/sql/migrations/: 002.sql
em_health/sql/pganalyze/: create_functions.sql  create_metric_funcs.sql  create_metric_tables.sql  create_tables.sql  stat_statements_cagg.sql
em_health/tests/: 9999_data.xml  test_app.py  test_db_client.py  test_hm.py  test_parser.py  test_performance.py
em_health/utils/: create_task.py  import_xml.py  logs.py  maintenance.py  tools.py  watcher.py
em_health/views/: epu_acquisition_daily.sql  epu_sessions.sql  stat_statements_cagg.sql  tomo_acquisition_daily.sql  tomo_counters.sql  tomo_sessions.sql  vacuum_state_daily.sql
(+135 files in other folders)
